test/ui/tests/name-resolution/multiple-undefined1.stderr
error[E021]: binding `Nothing` is not defined in module `topmost.alpha`
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:4:11
  |
4 | use alpha.Nothing
  |           ^^^^^^^
  |

error[E021]: binding `Air` is not defined in the root module
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:7:24
  |
7 |     Thin: Type = super.Air
  |                        ^^^
  |

error[E021]: binding `Air` is not defined in the root module
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:8:15
  |
8 |     use super.Air
  |               ^^^
  |

error[E021]: binding `empty` is not defined in the root module
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:9:17
  |
9 |     use topmost.empty as full
  |                 ^^^^^
  |

error[E021]: binding `air` is not defined in module `topmost.alpha`
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:12:19
   |
12 |         use super.air
   |                   ^^^
   |
  help: a binding with a similar name exists in scope: `Air` (aAir)

error[E021]: binding `Nothingness` is not defined in module `topmost.alpha`
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:14:12
   |
14 | use alpha.(Nothingness beta.space)
   |            ^^^^^^^^^^^
   |

error[E029]: binding `topmost.alpha.beta` is private
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined1.lushui:14:24
   |
14 | use alpha.(Nothingness beta.space)
   |                        ^^^^
   |

error: aborting due to 7 previous errors

